--- a/Pertemuan 1/index.html
+++ b/Pertemuan 1/index.html
@@ -3,19 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biodata Diri</title>
 </head>
 <body>
-    <h1><center>Biodata Diri</center></h1>
+    <center>
+    <srong><h1>Biodata Diri</h1><hr></srong>
+    <table>
+        <tr>
+            <td>Nama</td>
+            <td>: A. Afif Alhaq</td>
+        </tr>
+        <tr>
+            <td>NIM</td>
+            <td>: H071221064</td>
+        </tr>
+        <tr>
+            <td>Prodi</td>
+            <td>: Sistem Informasi</td>
+        </tr>
+        <tr>
+            <td>Departemen</td>
+            <td>: Matematika</td>
+        </tr>
+        <tr>
+            <td>Fakultas</td>
+            <td>: Matematika dan Ilmu Pengetahuan Alam</td>
+        </tr>
+        <tr>
+            <td>Universitas</td>
+            <td>: Universitas Hasanuddin</td>
+        </tr>
+        <tr>
+            <td>Alamat</td>
+            <td>: BTP Blok AB</td>
+        </tr>
+    </table>
 
-    <h5>Nama : A. Afif Alhaq</h5>
-    <h5>NIM : H071221064</h5>
-    <img src="user.png" alt="gambar saya"/>
-    <p>Skill</p>
-    <ul>
-        <li>Java</li>
-        <li>py</li>
-    </ul>
-    <a href="form.html">Registrasi</a>
+    <h2>Foto Saya</h2>
+    
+    <img src="user.png" alt="gambar saya" width="250"/>
+    
+    <table>
+        <tr>
+            <td>
+                <h2>Skills</h2>
+                <ul>
+                    <li>Tidur dan Mimpi</li>
+                    <li>Python, Java</li>
+                    <li>Html, CSS with GPT</li>
+                </ul>
+            </td>
+            <td>
+                <h2>Education</h2>
+                <ul>
+                    <li>Universitas Hasanuddin</li>
+                    <li>SMAN 11 Makassar</li>
+                    <li>SMPN 24 Makassar</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br>
+    <table border="6">
+        <th>
+            <a href="form.html">Registrasi</a>
+        </th>
+    </table>
+    </center>
 </body>
 </html>
