--- a/Pertemuan 5/index.html
+++ b/Pertemuan 5/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <i class='bx bx-money-withdraw' id="menu" onclick="showLogoutPopup()"></i>
+        <i class='bx bx-money-withdraw' id="menu" onclick="showPopup()"></i>
     </div>
     <div class="overlay" id="overlay"></div>
     <div class="popup" id="popup">
